<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/record_audio"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_record_audio"
        android:drawablePadding="16dp"
        android:drawableTint="@color/blue"
        android:gravity="center_vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/record_audio"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/photo_library"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_baseline_photo_library_24"
        android:drawablePadding="16dp"
        android:drawableTint="@color/blue"
        android:gravity="center_vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/photo_library"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/record_audio" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/get_location"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_location"
        android:drawablePadding="16dp"
        android:drawableTint="@color/blue"
        android:gravity="center_vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/get_location"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo_library" />

<!--    <com.google.android.material.textview.MaterialTextView-->
<!--        android:id="@+id/take_a_photo"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:drawableStart="@drawable/ic_baseline_camera_alt_24"-->
<!--        android:drawablePadding="16dp"-->
<!--        android:drawableTint="@color/blue"-->
<!--        android:gravity="center_vertical"-->
<!--        android:paddingTop="8dp"-->
<!--        android:paddingBottom="8dp"-->
<!--        android:text="@string/take_a_photo"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="18sp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/photo_library" />-->

<!--    <com.google.android.material.textview.MaterialTextView-->
<!--        android:id="@+id/get_location"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:drawableStart="@drawable/ic_location"-->
<!--        android:drawablePadding="16dp"-->
<!--        android:drawableTint="@color/blue"-->
<!--        android:gravity="center_vertical"-->
<!--        android:paddingTop="8dp"-->
<!--        android:paddingBottom="8dp"-->
<!--        android:text="@string/get_location"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="18sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/take_a_photo" />-->

</androidx.constraintlayout.widget.ConstraintLayout>